Prevent crash when no local properties is present

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,9 @@ dependencies {
 }
 
 Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
+try {
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+} catch (Exception ignored) {}
 
 bintray {
     user = properties.getProperty("bintray.user")
