--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'java'
+apply plugin: 'jacoco'
 apply plugin: 'me.tatarka.retrolambda'
 
 retrolambda {
@@ -30,6 +31,15 @@ retrolambda {
     oldJdk System.getenv("JAVA7_HOME")
     javaVersion JavaVersion.VERSION_1_6
 }
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+}
+check.dependsOn jacocoTestReport
+
 
 
 dependencies {
